add basic html sctructure and containers for bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title></title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width-device-width, initial-scale=1">
+  <title>Galactic Age Calculator</title>
 </head>
 <body>
-  
+  <div class="container">
+    <!-- Nav -->
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Galactic Calculator</h1>
+      </div>
+    </div>
+    <!-- Form -->
+    <div class="row">
+    </div>
+    <!-- Age Display -->
+  </div>
 </body>
 </html>
