changed class to id for planets ul

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <!-- Age Display -->
     <div class="row">
       <div class="col-md-12" id="ageDisplay">
-        <ul class="planets">
+        <ul id="planets">
         </ul>
       </div>
     </div>
