--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
           <input type="number" class="form-control" id="userAge">
         </div>
         <div class="col-md-12 d-grid">
-          <button type="button" class="btn btn-block btn-primary">Calculate!</button>
+          <button type="submit" class="btn btn-block btn-primary">Calculate!</button>
         </div>
       </form>
     </div>
