add jumbotron class and styling

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
   <div class="container">
-    <!-- Nav -->
+    <!-- Header -->
     <div class="row">
-      <div class="col-md-12">
-        <h1>Galactic Calculator</h1>
+      <div class="jumbotron">
+        <h1>Galactic Age Calculator</h1>
+        <p class="fw-light"><em>How old are <strong>you</strong> on mars?</em></p>
       </div>
     </div>
     <!-- Form -->
