--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,15 @@
         <p class="fw-light"><em>How old are <strong>you</strong> on mars?</em></p>
       </div>
     </div>
+    <!-- How/Why to use this app -->
+    <div class="row">
+      <div class="col-md-6">
+        <h2>What do you mean by Galactic Age Calculator?</h2>
+      </div>
+      <div class="col-md-6">
+
+      </div>
+    </div>
     <!-- Form -->
     <div class="row">
       <form id="ageCalcForm">
