change layout of rows

--- a/src/index.html
+++ b/src/index.html
@@ -14,26 +14,30 @@
         <p class="fw-light"><em>How old are <strong>you</strong> on mars?</em></p>
       </div>
     </div>
-    <!-- How/Why to use this app -->
     <div class="row">
-      <div class="col-md-6">
-        <h2>What do you mean by Galactic Age Calculator?</h2>
-      </div>
-      <div class="col-md-6">
-
-      </div>
-    </div>
-    <!-- Form -->
-    <div class="row">
-      <form id="ageCalcForm">
-        <div class="col-md-12">
-          <label for="userAge" class="form-label">Age:</label>
-          <input type="number" class="form-control" id="userAge">
+      <!-- How/Why to use this app -->
+      <div class="row">
+        <div class="col-md-3">
+          <h2>Whats a Galactic Age Calculator?</h2>
+          <p>Put simply, it calculates what your age would be based on a solar year on different planets. We consider a year to be one rotation around the sun so our solar year is 365 days; however Mercury for example takes only 88 days to rotate around the sun making its solar year 88 days long.</p>
+          <p><strong>Type in your age below and hit calculate to see what your age would be on other planets!</strong></p>
+          <form id="ageCalcForm">
+            <div>
+              <label for="userAge" class="form-label">Age:</label>
+              <input type="number" class="form-control" id="userAge">
+            </div>
+            <div class="d-grid">
+              <button type="submit" class="btn btn-block btn-primary">Calculate!</button>
+            </div>
+          </form>
         </div>
-        <div class="col-md-12 d-grid">
-          <button type="submit" class="btn btn-block btn-primary">Calculate!</button>
+        <div class="col-md-9">
+          <h2></h2>
         </div>
-      </form>
+      </div>
+      <!-- Form -->
+      <div class="row">
+      </div>
     </div>
     <!-- Age Display -->
     <div class="row">
