move planets display section into two column format with form

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       <div class="row">
         <div class="col-md-3">
           <h2>Whats a Galactic Age Calculator?</h2>
+          <hr>
           <p>Put simply, it calculates what your age would be based on a solar year on different planets. We consider a year to be one rotation around the sun so our solar year is 365 days; however Mercury for example takes only 88 days to rotate around the sun making its solar year 88 days long.</p>
           <p><strong>Type in your age below and hit calculate to see what your age would be on other planets!</strong></p>
           <!-- Form -->
@@ -34,17 +35,18 @@
             </div>
           </form>
         </div>
+        <!-- Age Display -->
         <div class="col-md-9">
-          <h2></h2>
+          <h2>Planets</h2>
+          <hr>
+          <div class="col-md-12" id="ageDisplay">
+            <ul id="planets">
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-    <!-- Age Display -->
     <div class="row">
-      <div class="col-md-12" id="ageDisplay">
-        <ul id="planets">
-        </ul>
-      </div>
     </div>
   </div>
 </body>
