change content of age calculator description in how/why use app section

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <div class="col-md-3">
           <h2>Whats a Galactic Age Calculator?</h2>
           <hr>
-          <p>Put simply, it calculates what your age would be based on a solar year on different planets. We consider a year to be one rotation around the sun so our solar year is 365 days; however Mercury for example takes only 88 days to rotate around the sun making its solar year 88 days long.</p>
+          <p>Put simply, a galactic age calculator calculates what your age would be based on the solar year of different planets. We consider a year to be one rotation around the sun so our solar year is 365 days; however Mercury for example takes only 88 days to rotate around the sun making its solar year 88 days.</p>
           <p><strong>Type in your age below and hit calculate to see what your age would be on other planets!</strong></p>
           <!-- Form -->
           <form id="ageCalcForm">
@@ -40,6 +40,7 @@
           <h2>Planets</h2>
           <hr>
           <div class="col-md-12" id="ageDisplay">
+            <!-- Old List -->
             <ul id="planets">
             </ul>
           </div>
