add card-group for planets

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,6 @@
         <p class="fw-light"><em>How old are <strong>you</strong> on mars?</em></p>
       </div>
     </div>
-    <div class="row">
       <!-- How/Why to use this app -->
       <div class="row">
         <div class="col-md-3">
@@ -37,18 +36,38 @@
         </div>
         <!-- Age Display -->
         <div class="col-md-9">
-          <h2>Planets</h2>
-          <hr>
-          <div class="col-md-12" id="ageDisplay">
-            <!-- Old List -->
-            <ul id="planets">
-            </ul>
-          </div>
+            <div id="ageDisplay">
+              <h2>Planets</h2>
+              <hr>
+              <div class="card-group">
+                <div class="card text-white bg-dark mb-3">
+                  <img src="#" class="card-img-top" alt="An image of earth from space.">
+                  <div class="card-body">
+                    <h5 class="card-title">Earth</h5>
+                    <p class="card-text">Fill in text here.</p>
+                  </div>
+                </div>
+                <div class="card text-white bg-dark mb-3">
+                  <img src="#" class="card-img-top" alt="An image of earth from space.">
+                  <div class="card-body">
+                    <h5 class="card-title">Earth</h5>
+                    <p class="card-text">Fill in text here.</p>
+                  </div>
+                </div>
+                <div class="card text-white bg-dark mb-3">
+                  <img src="#" class="card-img-top" alt="An image of earth from space.">
+                  <div class="card-body">
+                    <h5 class="card-title">Earth</h5>
+                    <p class="card-text">Fill in text here.</p>
+                  </div>
+                </div>
+              </div>
+              <!-- Old List -->
+              <ul id="planets">
+              </ul>
+            </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-    </div>
   </div>
 </body>
 </html>
