add imagges for earth, mercury, and venus

--- a/src/index.html
+++ b/src/index.html
@@ -41,23 +41,23 @@
               <hr>
               <div class="card-group">
                 <div class="card text-white bg-dark mb-3">
-                  <img src="#" class="card-img-top" alt="An image of earth from space.">
+                  <img src="./../assets/images/earth.jpg" class="card-img-top" alt="An image of earth from space.">
                   <div class="card-body">
                     <h5 class="card-title">Earth</h5>
                     <p class="card-text">Fill in text here.</p>
                   </div>
                 </div>
                 <div class="card text-white bg-dark mb-3">
-                  <img src="#" class="card-img-top" alt="An image of earth from space.">
+                  <img src="./../assets/images/mercury.png" class="card-img-top" alt="An image of Mercury.">
                   <div class="card-body">
-                    <h5 class="card-title">Earth</h5>
+                    <h5 class="card-title">Mercury</h5>
                     <p class="card-text">Fill in text here.</p>
                   </div>
                 </div>
                 <div class="card text-white bg-dark mb-3">
-                  <img src="#" class="card-img-top" alt="An image of earth from space.">
+                  <img src="./../assets/images/venus.jpg" class="card-img-top" alt="An image of Venus.">
                   <div class="card-body">
-                    <h5 class="card-title">Earth</h5>
+                    <h5 class="card-title">Venus</h5>
                     <p class="card-text">Fill in text here.</p>
                   </div>
                 </div>
