--- a/src/index.html
+++ b/src/index.html
@@ -40,27 +40,50 @@
               <h2>Planets</h2>
               <hr>
               <div class="card-group">
-                <div class="card text-white bg-dark mb-3">
+                <div class="card text-white bg-dark mb-2">
                   <img src="./../assets/images/earth.jpg" class="card-img-top" alt="An image of earth from space.">
                   <div class="card-body">
                     <h5 class="card-title">Earth</h5>
                     <p class="card-text">Fill in text here.</p>
                   </div>
                 </div>
-                <div class="card text-white bg-dark mb-3">
+                <div class="card text-white bg-dark mb-2">
                   <img src="./../assets/images/mercury.png" class="card-img-top" alt="An image of Mercury.">
                   <div class="card-body">
                     <h5 class="card-title">Mercury</h5>
                     <p class="card-text">Fill in text here.</p>
                   </div>
                 </div>
-                <div class="card text-white bg-dark mb-3">
+                <div class="card text-white bg-dark mb-2">
                   <img src="./../assets/images/venus.jpg" class="card-img-top" alt="An image of Venus.">
                   <div class="card-body">
                     <h5 class="card-title">Venus</h5>
                     <p class="card-text">Fill in text here.</p>
                   </div>
                 </div>
+              </div>
+              <div class="card-group">
+                <div class="card text-white bg-dark mb-2">
+                  <img src="./../assets/images/mars.jpg" class="card-img-top" alt="An image of Mars.">
+                  <div class="card-body">
+                    <h5 class="card-title">Mars</h5>
+                    <p class="card-text">Fill in text here.</p>
+                  </div>
+                </div>
+                <div class="card text-white bg-dark mb-2">
+                  <img src="./../assets/images/jupiter.jpg" class="card-img-top" alt="An image of Jupiter.">
+                  <div class="card-body">
+                    <h5 class="card-title">Jupiter</h5>
+                    <p class="card-text">Fill in text here.</p>
+                  </div>
+                </div>
+                <!-- <div class="card text-white bg-dark mb-2">
+                  <img src="#" class="card-img-top" alt="An image of Venus.">
+                  <div class="card-body">
+                    <h5 class="card-title">Venus</h5>
+                    <p class="card-text">Fill in text here.</p>
+                  </div>
+                </div> -->
               </div>
               <!-- Old List -->
               <ul id="planets">
