--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <p class="fw-light"><em>How old are <strong>you</strong> on mars?</em></p>
       </div>
     </div>
-      <!-- How/Why to use this app -->
+      <!-- App Explanation -->
       <div class="row">
         <div class="col-md-3">
           <h2>Whats a Galactic Age Calculator?</h2>
@@ -87,21 +87,7 @@
                     </ul>
                   </div>
                 </div>
-                <!--
-                  Extra card for symmetry
-                  <div class="card text-white bg-dark mb-2">
-                  <img src="#" class="card-img-top" alt="An image of Venus.">
-                  <div class="card-body">
-                    <h5 class="card-title">Venus</h5>
-                    <p class="card-text">Fill in text here.</p>
-                    <ul id="planets">
-                    </ul>
-                  </div>
-                </div> -->
               </div>
-              <!-- Old List -->
-              <ul id="planets">
-              </ul>
             </div>
         </div>
       </div>
