remove card paragraphs and add ageDisplayPlaceholder id

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,10 @@
         </div>
         <!-- Age Display -->
         <div class="col-md-9">
-            <div id="ageDisplay">
+          <div id="ageDisplayPlaceholder">
+            <h3>Enter age and click calculate button to see planets info</h2>
+          </div>
+          <div id="ageDisplay">
               <h2>Planets</h2>
               <hr>
               <div class="card-group">
@@ -44,7 +47,6 @@
                   <img src="./../assets/images/earth.jpg" class="card-img-top" alt="An image of earth from space.">
                   <div class="card-body">
                     <h5 class="card-title">Earth</h5>
-                    <p class="card-text">Fill in text here.</p>
                     <ul id="earth-planet">
                     </ul>
                   </div>
@@ -53,7 +55,6 @@
                   <img src="./../assets/images/mercury.png" class="card-img-top" alt="An image of Mercury.">
                   <div class="card-body">
                     <h5 class="card-title">Mercury</h5>
-                    <p class="card-text">Fill in text here.</p>
                     <ul id="mercury-planet">
                     </ul>
                   </div>
@@ -62,7 +63,6 @@
                   <img src="./../assets/images/venus.jpg" class="card-img-top" alt="An image of Venus.">
                   <div class="card-body">
                     <h5 class="card-title">Venus</h5>
-                    <p class="card-text">Fill in text here.</p>
                     <ul id="venus-planet">
                     </ul>
                   </div>
@@ -73,7 +73,6 @@
                   <img src="./../assets/images/mars.jpg" class="card-img-top" alt="An image of Mars.">
                   <div class="card-body">
                     <h5 class="card-title">Mars</h5>
-                    <p class="card-text">Fill in text here.</p>
                     <ul id="mars-planet">
                     </ul>
                   </div>
@@ -82,7 +81,6 @@
                   <img src="./../assets/images/jupiter.jpg" class="card-img-top" alt="An image of Jupiter.">
                   <div class="card-body">
                     <h5 class="card-title">Jupiter</h5>
-                    <p class="card-text">Fill in text here.</p>
                     <ul id="jupiter-planet">
                     </ul>
                   </div>
