add img of galaxy for ageDisplayPlaceholder

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
         <div class="col-md-9">
           <div id="ageDisplayPlaceholder">
             <h3>Enter age and click calculate button to see planets info</h2>
+            <img src="./../assets/images/galaxy.jpg" alt="An image of a galaxy.">
           </div>
           <div id="ageDisplay">
               <h2>Planets</h2>
