--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         <div class="col-md-9">
           <div id="ageDisplayPlaceholder">
             <h3>Enter age and click calculate button to see planets info</h2>
-            <img src="./../assets/images/galaxy.jpg" alt="An image of a galaxy.">
+            <img src="assets/images/galaxy.jpg" alt="An image of a galaxy.">
           </div>
           <div id="ageDisplay">
               <h2>Planets</h2>
               <hr>
               <div class="card-group">
                 <div class="card text-white bg-dark mb-2">
-                  <img src="./../assets/images/earth.jpg" class="card-img-top" alt="An image of earth from space.">
+                  <img src="assets/images/earth.jpg" class="card-img-top" alt="An image of earth from space.">
                   <div class="card-body">
                     <h5 class="card-title">Earth</h5>
                     <ul id="earth-planet">
@@ -53,7 +53,7 @@
                   </div>
                 </div>
                 <div class="card text-white bg-dark mb-2">
-                  <img src="./../assets/images/mercury.png" class="card-img-top" alt="An image of Mercury.">
+                  <img src="assets/images/mercury.png" class="card-img-top" alt="An image of Mercury.">
                   <div class="card-body">
                     <h5 class="card-title">Mercury</h5>
                     <ul id="mercury-planet">
@@ -61,7 +61,7 @@
                   </div>
                 </div>
                 <div class="card text-white bg-dark mb-2">
-                  <img src="./../assets/images/venus.jpg" class="card-img-top" alt="An image of Venus.">
+                  <img src="assets/images/venus.jpg" class="card-img-top" alt="An image of Venus.">
                   <div class="card-body">
                     <h5 class="card-title">Venus</h5>
                     <ul id="venus-planet">
@@ -71,7 +71,7 @@
               </div>
               <div class="card-group">
                 <div class="card text-white bg-dark mb-2">
-                  <img src="./../assets/images/mars.jpg" class="card-img-top" alt="An image of Mars.">
+                  <img src="assets/images/mars.jpg" class="card-img-top" alt="An image of Mars.">
                   <div class="card-body">
                     <h5 class="card-title">Mars</h5>
                     <ul id="mars-planet">
@@ -79,7 +79,7 @@
                   </div>
                 </div>
                 <div class="card text-white bg-dark mb-2">
-                  <img src="./../assets/images/jupiter.jpg" class="card-img-top" alt="An image of Jupiter.">
+                  <img src="assets/images/jupiter.jpg" class="card-img-top" alt="An image of Jupiter.">
                   <div class="card-body">
                     <h5 class="card-title">Jupiter</h5>
                     <ul id="jupiter-planet">
@@ -91,5 +91,5 @@
         </div>
       </div>
   </div>
-</body>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
