--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="col-md-9">
           <div id="ageDisplayPlaceholder">
             <h3>Enter age and click calculate button to see planets info</h2>
-            <img src="assets/images/galaxy.jpg" alt="An image of a galaxy.">
+            <img src="assets/images/galaxy.jpg" class="img-fluid" alt="An image of a galaxy.">
           </div>
           <div id="ageDisplay">
               <h2>Planets</h2>
